--- a/ПР8. Гладиаторы/ПР8. Гладиаторы.csproj
+++ b/ПР8. Гладиаторы/ПР8. Гладиаторы.csproj
@@ -45,7 +45,7 @@
   <ItemGroup>
     <Compile Include="Armor.cs" />
     <Compile Include="Gladiator.cs" />
-    <Compile Include="Player.cs" />
+    <Compile Include="Game.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Beast.cs" />
