add: battle system class

--- a/ПР8. Гладиаторы/ПР8. Гладиаторы.csproj
+++ b/ПР8. Гладиаторы/ПР8. Гладиаторы.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Armor.cs" />
+    <Compile Include="BattleSystem.cs" />
     <Compile Include="Gladiator.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Program.cs" />
