--- a/ПР8. Гладиаторы/ПР8. Гладиаторы.csproj
+++ b/ПР8. Гладиаторы/ПР8. Гладиаторы.csproj
@@ -47,6 +47,7 @@
     <Compile Include="BattleSystem.cs" />
     <Compile Include="Gladiator.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="Opponent.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Beast.cs" />
